--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.12",
+    "@mui/joy": "^5.0.0-beta.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.1",
